SETUP: Husky Prettier and Eslint

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "semi": false,
   "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "trailingComma": "es5"
 }
